@@ -35,6 +35,9 @@ BUGFIXES:
   ZOOKEEPER-480. FLE should perform leader check when node is not leading and
   add vote of follower (flavio via mahadev)
 
+  ZOOKEEPER-491. Prevent zero-weight servers from being elected (flavio via
+  mahadev)
+
 IMPROVEMENTS:
 
 NEW FEATURES:
